--- a/examples/notebooks/isotropy_2d.ipynb
+++ b/examples/notebooks/isotropy_2d.ipynb
@@ -102,7 +102,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sphinx",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -116,7 +116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
