Add thread control. Improve performance for meshes with large number of non-myocardial cells

--- a/examples/notebooks/tp06_2d.ipynb
+++ b/examples/notebooks/tp06_2d.ipynb
@@ -2,20 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Running TP062D: 100%|██████████| 18000/18000 [03:16<00:00, 91.65it/s]\n",
-      "Running TP062D: 100%|██████████| 18000/18000 [03:21<00:00, 89.23it/s]\n",
-      "Running TP062D: 100%|██████████| 18000/18000 [03:20<00:00, 89.67it/s]\n",
-      "Running TP062D: 100%|██████████| 18000/18000 [03:23<00:00, 88.60it/s]\n",
-      "Running TP062D: 100%|██████████| 18000/18000 [03:26<00:00, 87.35it/s]\n",
-      "Running TP062D: 100%|██████████| 18000/18000 [03:27<00:00, 86.74it/s]\n",
-      "Running TP062D: 100%|██████████| 18000/18000 [03:29<00:00, 85.91it/s]\n"
+      "Running TP062D:  33%|███▎      | 5969/18000 [01:31<03:04, 65.04it/s]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 37\u001b[0m\n\u001b[1;32m     34\u001b[0m model\u001b[38;5;241m.\u001b[39mcardiac_tissue \u001b[38;5;241m=\u001b[39m tissue\n\u001b[1;32m     35\u001b[0m model\u001b[38;5;241m.\u001b[39mstim_sequence \u001b[38;5;241m=\u001b[39m stim_sequence\n\u001b[0;32m---> 37\u001b[0m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     39\u001b[0m labeled \u001b[38;5;241m=\u001b[39m (model\u001b[38;5;241m.\u001b[39mu \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m40\u001b[39m)\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;28mint\u001b[39m)\n\u001b[1;32m     40\u001b[0m props \u001b[38;5;241m=\u001b[39m ski\u001b[38;5;241m.\u001b[39mmeasure\u001b[38;5;241m.\u001b[39mregionprops_table(labeled, properties\u001b[38;5;241m=\u001b[39m(\n\u001b[1;32m     41\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124morientation\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmajor_axis_length\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mminor_axis_length\u001b[39m\u001b[38;5;124m'\u001b[39m))\n",
+      "File \u001b[0;32m~/Projects/Fibrosis/Finitewave/finitewave/core/model/cardiac_model.py:137\u001b[0m, in \u001b[0;36mCardiacModel.run\u001b[0;34m(self, initialize)\u001b[0m\n\u001b[1;32m    135\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrun_diffuse_kernel()\n\u001b[1;32m    136\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtransmembrane_current \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mu_new \u001b[38;5;241m-\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mu\n\u001b[0;32m--> 137\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_ionic_kernel\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    139\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtracker_sequence:\n\u001b[1;32m    140\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtracker_sequence\u001b[38;5;241m.\u001b[39mtracker_next()\n",
+      "File \u001b[0;32m~/Projects/Fibrosis/Finitewave/finitewave/cpuwave2D/model/tp06_2d.py:70\u001b[0m, in \u001b[0;36mTP062D.run_ionic_kernel\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     65\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mrun_ionic_kernel\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m     66\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     67\u001b[0m \u001b[38;5;124;03m    Executes the ionic kernel function to update ionic currents and state\u001b[39;00m\n\u001b[1;32m     68\u001b[0m \u001b[38;5;124;03m    variables\u001b[39;00m\n\u001b[1;32m     69\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m---> 70\u001b[0m     \u001b[43mionic_kernel_2d\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mu_new\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mu\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mCai\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mCaSR\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mCaSS\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     71\u001b[0m \u001b[43m                    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mNai\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mKi\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mM_\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mH_\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mJ_\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mXr1\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     72\u001b[0m \u001b[43m                    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mXr2\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mXs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mR_\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mS_\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mD_\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mF_\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     73\u001b[0m \u001b[43m                    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mF2_\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mFCass\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mRR\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mOO\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     74\u001b[0m \u001b[43m                    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcardiac_tissue\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmyo_indexes\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdt\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -30,7 +37,7 @@
     "\n",
     "# number of nodes on the side\n",
     "n = 400\n",
-    "d = 0.2\n",
+    "d = 0.\n",
     "alphas = np.radians(np.arange(0, 91, 15))\n",
     "# alphas = np.radians([45])\n",
     "\n",
@@ -39,16 +46,12 @@
     "\n",
     "for alpha in alphas:\n",
     "    tissue = fw.CardiacTissue2D([n, n])\n",
-    "    tissue.mesh = np.ones([n, n])\n",
     "    tissue.mesh[np.random.random([n, n]) < d] = 2\n",
     "    tissue.add_boundaries()\n",
-    "    tissue.fibers = np.zeros([2, n, n,])\n",
-    "    tissue.fibers[0] = np.cos(alpha)\n",
-    "    tissue.fibers[1] = np.sin(alpha)\n",
     "\n",
-    "    tissue.stencil = fw.SymmetricStencil2D()\n",
-    "    tissue.D_al = 0.154\n",
-    "    tissue.D_ac = tissue.D_al/9\n",
+    "    tissue.fibers = np.zeros([n, n, 2])\n",
+    "    tissue.fibers[..., 0] = np.cos(alpha)\n",
+    "    tissue.fibers[..., 1] = np.sin(alpha)\n",
     "\n",
     "    stim_sequence = fw.StimSequence()\n",
     "    stim_sequence.add_stim(fw.StimVoltageCoord2D(0, 20, n//2 - 5, n//2 + 5,\n",
