--- a/examples/notebooks/anisotropy_2d.ipynb
+++ b/examples/notebooks/anisotropy_2d.ipynb
@@ -9,13 +9,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Running AlievPanfilov2D: 100%|██████████| 2500/2500 [00:05<00:00, 438.65it/s]\n",
-      "Running AlievPanfilov2D: 100%|██████████| 2500/2500 [00:03<00:00, 641.81it/s]\n",
-      "Running AlievPanfilov2D: 100%|██████████| 2500/2500 [00:04<00:00, 600.06it/s]\n",
-      "Running AlievPanfilov2D: 100%|██████████| 2500/2500 [00:04<00:00, 550.34it/s]\n",
-      "Running AlievPanfilov2D: 100%|██████████| 2500/2500 [00:04<00:00, 599.60it/s]\n",
-      "Running AlievPanfilov2D: 100%|██████████| 2500/2500 [00:04<00:00, 592.64it/s]\n",
-      "Running AlievPanfilov2D: 100%|██████████| 2500/2500 [00:04<00:00, 594.40it/s]\n"
+      "Running AlievPanfilov2D:   0%|          | 0/2500 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Running AlievPanfilov2D: 100%|██████████| 2500/2500 [00:03<00:00, 670.30it/s]\n",
+      "Running AlievPanfilov2D: 100%|██████████| 2500/2500 [00:03<00:00, 711.08it/s]\n",
+      "Running AlievPanfilov2D: 100%|██████████| 2500/2500 [00:03<00:00, 728.21it/s]\n",
+      "Running AlievPanfilov2D: 100%|██████████| 2500/2500 [00:03<00:00, 736.05it/s]\n",
+      "Running AlievPanfilov2D: 100%|██████████| 2500/2500 [00:03<00:00, 730.48it/s]\n",
+      "Running AlievPanfilov2D: 100%|██████████| 2500/2500 [00:03<00:00, 724.68it/s]\n",
+      "Running AlievPanfilov2D: 100%|██████████| 2500/2500 [00:03<00:00, 735.04it/s]\n"
      ]
     }
    ],
@@ -25,8 +32,10 @@
     "import numpy as np\n",
     "import skimage as ski\n",
     "import pandas as pd\n",
+    "import numba\n",
     "\n",
     "import finitewave as fw\n",
+    "\n",
     "\n",
     "# number of nodes on the side\n",
     "n = 400\n",
@@ -40,12 +49,8 @@
     "    tissue = fw.CardiacTissue2D([n, n])\n",
     "    # add fibers orientation vectors\n",
     "    tissue.fibers = np.zeros([n, n, 2])\n",
-    "    tissue.fibers[0] = np.cos(alpha)\n",
-    "    tissue.fibers[1] = np.sin(alpha)\n",
-    "    # add numeric method stencil for weights computations\n",
-    "    tissue.stencil = fw.AsymmetricStencil2D()\n",
-    "    tissue.D_al = 1\n",
-    "    tissue.D_ac = tissue.D_al/9\n",
+    "    tissue.fibers[..., 0] = np.cos(alpha)\n",
+    "    tissue.fibers[..., 1] = np.sin(alpha)\n",
     "\n",
     "    # create model object:\n",
     "    aliev_panfilov = fw.AlievPanfilov2D()\n",
@@ -80,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -129,27 +134,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Running AlievPanfilov2D:   0%|          | 0/15000 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Running AlievPanfilov2D: 100%|██████████| 15000/15000 [00:19<00:00, 760.99it/s]\n",
-      "Running AlievPanfilov2D: 100%|██████████| 15000/15000 [00:19<00:00, 764.12it/s]\n",
-      "Running AlievPanfilov2D: 100%|██████████| 15000/15000 [00:19<00:00, 760.64it/s]\n",
-      "Running AlievPanfilov2D: 100%|██████████| 15000/15000 [00:19<00:00, 764.70it/s]\n",
-      "Running AlievPanfilov2D: 100%|██████████| 15000/15000 [00:19<00:00, 769.11it/s]\n",
-      "Running AlievPanfilov2D: 100%|██████████| 15000/15000 [00:19<00:00, 777.98it/s]\n",
-      "Running AlievPanfilov2D: 100%|██████████| 15000/15000 [00:19<00:00, 759.48it/s]\n"
+      "Running AlievPanfilov2D: 100%|██████████| 15000/15000 [00:21<00:00, 710.15it/s]\n",
+      "Running AlievPanfilov2D: 100%|██████████| 15000/15000 [00:21<00:00, 704.16it/s]\n",
+      "Running AlievPanfilov2D: 100%|██████████| 15000/15000 [00:20<00:00, 741.41it/s]\n",
+      "Running AlievPanfilov2D: 100%|██████████| 15000/15000 [00:20<00:00, 739.47it/s]\n",
+      "Running AlievPanfilov2D: 100%|██████████| 15000/15000 [00:20<00:00, 738.44it/s]\n",
+      "Running AlievPanfilov2D: 100%|██████████| 15000/15000 [00:19<00:00, 781.85it/s]\n",
+      "Running AlievPanfilov2D: 100%|██████████| 15000/15000 [00:19<00:00, 775.13it/s]\n"
      ]
     }
    ],
@@ -492,7 +490,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "sphinx",
    "language": "python",
    "name": "python3"
   },
@@ -506,7 +504,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
