--- a/examples/notebooks/anisotropy_2d.ipynb
+++ b/examples/notebooks/anisotropy_2d.ipynb
@@ -353,14 +353,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Running AlievPanfilov2D: 100%|██████████| 1/1 [00:00<00:00, 153.44it/s]\n"
+      "Running AlievPanfilov2D: 100%|██████████| 12000/12000 [00:06<00:00, 1722.22it/s]\n"
      ]
     }
    ],
@@ -377,35 +377,24 @@
     "\n",
     "# alphas = np.radians(np.arange(0, 91, 15))\n",
     "alpha = np.radians(0)\n",
-    "# loop over different anisotropy coefficients\n",
-    "d = 0.\n",
     "tissue = fw.CardiacTissue2D([n, n])\n",
-    "# create a mesh of cardiomyocytes (elems = 1):\n",
-    "tissue.mesh = np.ones([n, n])\n",
-    "tissue.mesh[np.random.random([n, n]) < d] = 2\n",
-    "# tissue.mesh[tuple(selected_coords.T)] = 2\n",
-    "# tissue.mesh[n//4: n//3, n//4: n//3] = 2\n",
-    "tissue.add_boundaries()\n",
     "# add fibers orientation vectors\n",
-    "tissue.fibers = np.zeros([2, n, n])\n",
-    "tissue.fibers[0] = np.cos(alpha)\n",
-    "tissue.fibers[1] = np.sin(alpha)\n",
-    "# add numeric method stencil for weights computations\n",
-    "tissue.stencil = fw.AsymmetricStencil2D()\n",
-    "tissue.D_al = 1\n",
-    "tissue.D_ac = tissue.D_al\n",
+    "tissue.fibers = np.zeros([n, n, 2])\n",
+    "tissue.fibers[..., 0] = np.cos(alpha)\n",
+    "tissue.fibers[..., 1] = np.sin(alpha)\n",
+    "\n",
+    "# set up stimulation parameters:\n",
+    "stim_sequence = fw.StimSequence()\n",
+    "stim_sequence.add_stim(fw.StimVoltageCoord2D(0, 1, 1, 3, 1, n-1))\n",
     "\n",
     "# create model object:\n",
     "aliev_panfilov = fw.AlievPanfilov2D()\n",
     "# set up numerical parameters:\n",
     "aliev_panfilov.dt = 0.001\n",
     "aliev_panfilov.dr = 0.1\n",
-    "aliev_panfilov.t_max = 0.001\n",
-    "# set up stimulation parameters:\n",
-    "stim_sequence = fw.StimSequence()\n",
-    "stim_sequence.add_stim(fw.StimVoltageCoord2D(0, 1, 1, 3, 1, n-1))\n",
-    "stim_sequence.add_stim(fw.StimVoltageCoord2D(50, 1, 1, n-1, 1, n//2))\n",
-    "# add the tissue and the stim parameters to the model object:\n",
+    "aliev_panfilov.t_max = 12\n",
+    "\n",
+    "\n",
     "aliev_panfilov.cardiac_tissue = tissue\n",
     "aliev_panfilov.stim_sequence = stim_sequence\n",
     "\n",
@@ -414,83 +403,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'act_time_tracker' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m plt\u001b[38;5;241m.\u001b[39mfigure()\n\u001b[0;32m----> 2\u001b[0m plt\u001b[38;5;241m.\u001b[39mimshow(\u001b[43mact_time_tracker\u001b[49m\u001b[38;5;241m.\u001b[39moutput, cmap\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mviridis\u001b[39m\u001b[38;5;124m'\u001b[39m, origin\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlower\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      3\u001b[0m plt\u001b[38;5;241m.\u001b[39mcolorbar()\n\u001b[1;32m      4\u001b[0m plt\u001b[38;5;241m.\u001b[39mshow()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'act_time_tracker' is not defined"
+     ]
+    },
     {
      "data": {
       "text/plain": [
-       "array([0. , 0.1, 0. , 0.1, 0.6, 0.1, 0. , 0.1, 0. ])"
+       "<Figure size 640x480 with 0 Axes>"
       ]
      },
-     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "tissue.weights[50, 50]"
+    "plt.figure()\n",
+    "plt.imshow(act_time_tracker.output, cmap='viridis', origin='lower')\n",
+    "plt.colorbar()\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Running AlievPanfilov2D: 100%|██████████| 3000/3000 [00:02<00:00, 1399.24it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "aliev_panfilov.t_max = 30\n",
-    "aliev_panfilov.run(initialize=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[] []\n",
-      "[]\n"
+      "1.4568030919967603 0.49791924893514966 29.87179465597364\n"
      ]
     }
    ],
    "source": [
-    "%matplotlib qt\n",
+    "res = fw.Velocity2DCalculation.velocity_vector(act_time_tracker.output,\n",
+    "                                               aliev_panfilov.dr,\n",
+    "                                               orientation=True)\n",
     "\n",
-    "i = 0\n",
-    "u = aliev_panfilov.u.copy()\n",
-    "# y, x = np.unravel_index(np.argmin(u), u.shape)\n",
-    "y, x = np.where(u < -0.01)\n",
+    "major, minor, orientation = res\n",
     "\n",
-    "print(y, x)\n",
+    "print(major, minor, np.degrees(orientation))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.19000000000000014 11.989999999998794\n"
+     ]
+    }
+   ],
+   "source": [
+    "act_t = act_time_tracker.output\n",
     "\n",
-    "print(u[x, y])\n",
+    "time_min = np.min(act_t[act_t >= 0])\n",
+    "time_max = np.max(act_t)\n",
     "\n",
-    "u[tissue.mesh != 1] = np.nan\n",
+    "print(time_min, time_max)\n",
+    "\n",
+    "mask = np.argwhere((act_t >= time_min) & (act_t <= time_max))\n",
     "\n",
     "plt.figure()\n",
-    "plt.imshow(u, cmap='viridis', origin='lower')\n",
-    "# plt.ylim([y-10, y+10])\n",
-    "# plt.xlim([x-10, x+10])\n",
-    "plt.plot(x, y, 'rx')\n",
+    "plt.imshow(mask, cmap='viridis', origin='lower')\n",
     "plt.colorbar()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42.026791508792336 42.45588899296949 124.70169930116218\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = np.argwhere(aliev_panfilov.u > 0.1)\n",
+    "data = data - np.mean(data, axis=0)\n",
+    "\n",
+    "cov_matrix = np.cov(data.T)\n",
+    "\n",
+    "cov_matrix = measure.inertia_tensor((aliev_panfilov.u[:, :, :] > 0.1))\n",
+    "\n",
+    "eigvals, eigvecs = np.linalg.eigh(cov_matrix)\n",
+    "\n",
+    "sorted_ids = np.argsort(eigvals)[::-1]\n",
+    "eigvals = eigvals[sorted_ids]\n",
+    "eigvecs = eigvecs[:, sorted_ids]\n",
+    "\n",
+    "def calc_axis_length(eigvals, i=1, j=1, k=-1):\n",
+    "    return np.sqrt(2.5 * (i * eigvals[0] + j * eigvals[1] + k * eigvals[2]))\n",
+    "\n",
+    "x = calc_axis_length(eigvals, i=-1, j=1, k=1)\n",
+    "y = calc_axis_length(eigvals, i=1, j=-1, k=1)\n",
+    "z = calc_axis_length(eigvals, i=1, j=1, k=-1)\n",
+    "\n",
+    "print(x, y, z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([44.92279279, 29.89175549])"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def orientation(vec):\n",
+    "    x, y, z = vec\n",
+    "    theta = np.arccos(z)\n",
+    "    phi = np.arctan2(y, x)\n",
+    "    return theta, phi\n",
+    "\n",
+    "\n",
+    "np.degrees(orientation(eigvecs[:, 2]))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sphinx",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -504,7 +567,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
